@@ -2,6 +2,7 @@ Changelog for mk-table-checksum and mk-checksum-filter:
 
    * Checksum queries caused fatal warnings on MySQL 5.1 (issue 186).
    * Added DSN OPTIONS section to POD (issue 55).
+   * Tool crashed if no DSN h part was specified (issue 947).
 
 2010-03-01: version 1.2.12
 
